--- a/masfotos.html
+++ b/masfotos.html
@@ -1,10 +1,18 @@
-<head>
+<!DOCTYPE html>
 
+<head>
+  <meta charset="utf-8">
+
+<title>Album de gatos</title>
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 
 
 
 <style>
+ .red-text {
+    color: red;
+  }
+
 .imagen-chikita {
 	width: 200px;
 
@@ -17,13 +25,10 @@
 	height: 150px;
 }
 
-h1 {
-    font-family: Lobster, monospace;
-    text-align: center;
-    color: red;
-    font
+h1 {font-family: Lobster, monospace;text-align: center;color:red;}
 
-}
+
+
 a:visited, a:link {
 	 background-color: #f44336;
   color: white;
@@ -37,19 +42,27 @@ a:hover{
 	background-color: red;
 }
 
-body {
-  color: white;
-  background-color:121212;color:white;
- }
+body {background-color:#121113;color:white;}
+
+
+.li1 {float:left;}
+
 </style>
 </head>
 
 <body>
-<h1 class="red-text"><u>Cat Photo App</u></h1>
+
+<h1><u>CatPhotoApp</u></h1>
+
+<nav>
 <ul>
-<li id="li1" type="none"><a href="index.html">Inicio</a></li>
+<li class="li1" type="none"><a href="index.html">Inicio</a></li>
+<li class="li1" type="none"><a href="masfotos.html">Album de fotos de gatos</a></li>
+
 </ul>
-<br><br>
+</nav>
+<br><br><br><br>
+
 <img class= "imagen-chikita" src="https://estaticos.muyinteresante.es/media/cache/1140x_thumb/uploads/images/gallery/59c4f5655bafe82c692a7052/gato-marron_0.jpg" alt="NO ANDA LA IMAGEN LA PUTA MADRE :(">
 
 <img class= "imagen-chikita imagen2"  src="https://ichef.bbci.co.uk/news/640/cpsprodpb/8536/production/_103520143_gettyimages-908714708.jpg">
