--- a/pagina2.html
+++ b/pagina2.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 
 <style>
@@ -40,14 +42,28 @@ a:visited, a:link {
 a:hover{
 	background-color: red;
 }
-body {
-  background-color:121212;color:white
+
+
+
+
+body {background-color:#121113;color:white;}
+
+#li1 {float:left;}
+
 </style>
 
-<h1 class="red-text"><u>Cat Photo App</u></h1>
+<h1><u>CatPhotoApp</u></h1>
+<nav>
 <ul>
-<li id="li1"type="none"><a href="index.html">Inicio</a></li>
+
+
+<li id="li1" type="none"><a href="index.html">Inicio</a></li>
+
+<li id="li1" type="none"><a href="masfotos.html">Album de fotos de gatos</a></li>
+
 </ul>
+</nav>
+
 <br><br>
 <h2> <u>GRACIAS POR COMPLETAR EL FORMULARIO UWU</u></h2>
 
